Refactoring: using patched version of Crawler-Commons
Signed-off-by: Tokenizer <fuad.efendi@tokenizer.ca>